--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 
 @layer{
     .section-container{
-        @apply max-w-[1440px] container px-4 py-20;
+        @apply container mx-auto px-4 py-20;
     }
 }
 
